--- a/daili.yaml
+++ b/daili.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.86
-  maximum: 7.42
-  average: 7.06
-  UpdateDay: '2022-05-04T12:30:29.210147'
+  minimum: 6.64
+  maximum: 6.85
+  average: 6.77
+  UpdateDay: '2022-05-04T15:30:31.542658'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 31140
+  Rank: 31241
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 16.12
   UpdateDay: '2022-05-04T09:30:32.615059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 27748
+  Rank: 27848
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -68,27 +68,27 @@ proxies:
   cipher: aes-256-cfb
   password: '4415934295'
   success_rate: 100.0
-  minimum: 10.04
-  maximum: 11.31
-  average: 10.69
-  UpdateDay: '2022-05-04T12:30:28.211601'
+  minimum: 9.52
+  maximum: 10.51
+  average: 9.88
+  UpdateDay: '2022-05-04T15:30:29.548052'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 23530
+  Rank: 23631
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 1443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 60.21
-  maximum: 102.02
-  average: 77.2
-  UpdateDay: '2022-05-04T09:30:50.784919'
+  minimum: 93.37
+  maximum: 103.17
+  average: 98.15
+  UpdateDay: '2022-05-04T15:30:34.210161'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 20940
+  Rank: 21001
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -101,7 +101,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 16938
+  Rank: 16988
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -111,12 +111,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 17.07
-  maximum: 42.69
-  average: 30.14
-  UpdateDay: '2022-05-04T12:30:29.530459'
+  minimum: 39.82
+  maximum: 44.08
+  average: 41.58
+  UpdateDay: '2022-05-04T15:30:33.757203'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 16809
+  Rank: 16905
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -126,27 +126,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 82.5
-  maximum: 102.41
-  average: 89.31
-  UpdateDay: '2022-05-04T12:30:31.947788'
+  minimum: 78.56
+  maximum: 105.97
+  average: 92.04
+  UpdateDay: '2022-05-04T15:30:34.189729'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 15677
+  Rank: 15713
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 75.54
-  maximum: 84.77
-  average: 80.25
-  UpdateDay: '2022-05-04T12:30:32.213823'
+  minimum: 73.41
+  maximum: 81.67
+  average: 76.65
+  UpdateDay: '2022-05-04T15:30:34.312879'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 15553
+  Rank: 15600
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 35.69
-  maximum: 43.63
-  average: 40.31
-  UpdateDay: '2022-05-04T12:30:29.567918'
+  minimum: 38.69
+  maximum: 48.52
+  average: 42.48
+  UpdateDay: '2022-05-04T15:30:33.761566'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 14387
+  Rank: 14473
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -171,12 +171,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.18
-  maximum: 50.35
-  average: 46.34
-  UpdateDay: '2022-05-04T12:30:29.571749'
+  minimum: 40.05
+  maximum: 47.45
+  average: 42.83
+  UpdateDay: '2022-05-04T15:30:33.758803'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 9611
+  Rank: 9656
 - alterId: 0
   cipher: auto
   http-opts:
@@ -201,7 +201,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 9471
+  Rank: 9515
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -211,12 +211,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.54
-  maximum: 46.78
-  average: 44.93
-  UpdateDay: '2022-05-04T12:30:31.786446'
+  minimum: 38.97
+  maximum: 46.43
+  average: 41.47
+  UpdateDay: '2022-05-04T15:30:34.012425'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 7620
+  Rank: 7721
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -226,27 +226,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.31
-  maximum: 57.0
-  average: 48.35
-  UpdateDay: '2022-05-04T12:30:32.402381'
+  minimum: 40.49
+  maximum: 55.09
+  average: 46.77
+  UpdateDay: '2022-05-04T15:30:34.234667'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 7297
+  Rank: 7388
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
   type: trojan
   country: "\U0001F1FA\U0001F1F8 US"
-  password: 28d98f761aca9d636f44db62544628eb
+  password: 36ebef7d1b1d6205fd0c55f28800e674
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 170.74
-  maximum: 172.11
-  average: 171.61
-  UpdateDay: '2022-05-04T12:30:32.531281'
+  minimum: 199.83
+  maximum: 220.4
+  average: 207.92
+  UpdateDay: '2022-05-04T15:30:34.717840'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 6995
+  Rank: 7034
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -261,7 +261,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 6696
+  Rank: 6781
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -273,7 +273,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 6526
+  Rank: 6611
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -285,7 +285,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 6498
+  Rank: 6584
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -300,7 +300,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 6455
+  Rank: 6499
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
@@ -315,7 +315,7 @@ proxies:
   average: 248.79
   UpdateDay: '2022-05-04T12:30:32.970847'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 6264
+  Rank: 6284
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -325,12 +325,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.1
-  maximum: 48.39
-  average: 44.69
-  UpdateDay: '2022-05-04T12:30:31.629938'
+  minimum: 39.1
+  maximum: 40.76
+  average: 39.97
+  UpdateDay: '2022-05-04T15:30:33.946770'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 4797
+  Rank: 4885
 proxy-groups:
 - name: PG-default
   type: fallback
