--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.64
-  maximum: 6.85
-  average: 6.77
-  UpdateDay: '2022-05-04T15:30:31.542658'
+  minimum: 6.52
+  maximum: 7.57
+  average: 7.16
+  UpdateDay: '2022-05-04T18:32:40.264509'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 31441
+  Rank: 31542
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,40 +55,56 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 7.06
-  maximum: 34.21
-  average: 16.12
-  UpdateDay: '2022-05-04T09:30:32.615059'
+  minimum: 7.09
+  maximum: 39.35
+  average: 18.12
+  UpdateDay: '2022-05-04T18:32:40.264127'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 28048
+  Rank: 28149
 - name: 101.91.121.247:50004@ss
-  type: ss
   server: 101.91.121.247
   port: 50004
-  cipher: aes-256-cfb
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: '4415934295'
+  cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.52
-  maximum: 10.51
-  average: 9.88
-  UpdateDay: '2022-05-04T15:30:29.548052'
+  minimum: 9.39
+  maximum: 12.47
+  average: 10.77
+  UpdateDay: '2022-05-04T18:34:14.767205'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 23831
+  Rank: 23933
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 93.37
-  maximum: 103.17
-  average: 98.15
-  UpdateDay: '2022-05-04T15:30:34.210161'
+  minimum: 62.2
+  maximum: 102.48
+  average: 85.06
+  UpdateDay: '2022-05-04T18:32:47.411058'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 21111
+  Rank: 21162
+- name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
+  server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
+  port: 21089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
+  password: SfobRIcergHchqBFzzua
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 25.19
+  maximum: 42.24
+  average: 35.05
+  UpdateDay: '2022-05-04T18:34:15.092547'
+  PFirstFoundDay: '2022-03-13T18:25:41.957547'
+  Rank: 17202
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -101,82 +117,67 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 17117
-- name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
-  server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 39.82
-  maximum: 44.08
-  average: 41.58
-  UpdateDay: '2022-05-04T15:30:33.757203'
-  PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 17100
+  Rank: 17202
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 78.56
-  maximum: 105.97
-  average: 92.04
-  UpdateDay: '2022-05-04T15:30:34.189729'
+  minimum: 52.53
+  maximum: 55.68
+  average: 54.62
+  UpdateDay: '2022-05-04T18:32:48.075347'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 15751
+  Rank: 15800
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 73.41
-  maximum: 81.67
-  average: 76.65
-  UpdateDay: '2022-05-04T15:30:34.312879'
+  minimum: 73.42
+  maximum: 87.95
+  average: 82.51
+  UpdateDay: '2022-05-04T18:34:17.342295'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 15688
+  Rank: 15740
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  port: 20089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 20089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.69
-  maximum: 48.52
-  average: 42.48
-  UpdateDay: '2022-05-04T15:30:33.761566'
+  minimum: 40.1
+  maximum: 71.28
+  average: 50.82
+  UpdateDay: '2022-05-04T18:32:40.364098'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 14653
+  Rank: 14744
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.05
-  maximum: 47.45
-  average: 42.83
-  UpdateDay: '2022-05-04T15:30:33.758803'
+  minimum: 40.14
+  maximum: 46.44
+  average: 42.8
+  UpdateDay: '2022-05-04T18:34:15.140776'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 9712
+  Rank: 9764
 - alterId: 0
   cipher: auto
   http-opts:
@@ -201,37 +202,37 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 9585
+  Rank: 9593
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.97
-  maximum: 46.43
-  average: 41.47
-  UpdateDay: '2022-05-04T15:30:34.012425'
+  minimum: 41.37
+  maximum: 47.33
+  average: 45.01
+  UpdateDay: '2022-05-04T18:32:44.038809'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 7911
+  Rank: 7997
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.49
-  maximum: 55.09
-  average: 46.77
-  UpdateDay: '2022-05-04T15:30:34.234667'
+  minimum: 36.92
+  maximum: 43.24
+  average: 39.18
+  UpdateDay: '2022-05-04T18:33:38.353993'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 7576
+  Rank: 7677
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
@@ -241,12 +242,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 199.83
-  maximum: 220.4
-  average: 207.92
-  UpdateDay: '2022-05-04T15:30:34.717840'
+  minimum: 171.27
+  maximum: 178.42
+  average: 173.7
+  UpdateDay: '2022-05-04T18:34:17.955380'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 7116
+  Rank: 7165
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -261,7 +262,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 6956
+  Rank: 7051
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -273,7 +274,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 6786
+  Rank: 6886
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -285,7 +286,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 6756
+  Rank: 6856
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -300,7 +301,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 6595
+  Rank: 6641
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
@@ -310,12 +311,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 245.79
-  maximum: 251.43
-  average: 248.79
-  UpdateDay: '2022-05-04T12:30:32.970847'
+  minimum: 253.68
+  maximum: 1258.58
+  average: 589.77
+  UpdateDay: '2022-05-04T18:34:19.174390'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 6316
+  Rank: 6337
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -325,12 +326,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.1
-  maximum: 40.76
-  average: 39.97
-  UpdateDay: '2022-05-04T15:30:33.946770'
+  minimum: 40.12
+  maximum: 48.02
+  average: 43.79
+  UpdateDay: '2022-05-04T18:34:15.639475'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 5010
+  Rank: 5087
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -342,8 +343,8 @@ proxy-groups:
   - music.desperadoj.com:30003@ss
   - 101.91.121.247:50004@ss
   - 106.180.225.69:1443@trojan
-  - fkgfw-prod.i.sxl.cn:443@ss
   - hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
+  - fkgfw-prod.i.sxl.cn:443@ss
   - 210.152.13.168:443@trojan
   - 2.58.242.43:443@trojan
   - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
