--- a/daili.yaml
+++ b/daili.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 6.8
   UpdateDay: '2022-05-05T06:32:03.743127'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 32749
+  Rank: 32849
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 9.67
   UpdateDay: '2022-05-05T06:30:29.904174'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 29346
+  Rank: 29446
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   type: ss
@@ -74,7 +74,7 @@ proxies:
   average: 9.95
   UpdateDay: '2022-05-05T06:30:29.898850'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 25067
+  Rank: 25144
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   type: trojan
@@ -89,7 +89,7 @@ proxies:
   average: 59.65
   UpdateDay: '2022-05-05T06:30:37.040191'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 21991
+  Rank: 22086
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -104,7 +104,7 @@ proxies:
   average: 47.4
   UpdateDay: '2022-05-05T06:32:04.169101'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 18361
+  Rank: 18461
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,7 +117,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 18071
+  Rank: 18162
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -132,7 +132,7 @@ proxies:
   average: 56.3
   UpdateDay: '2022-05-05T06:32:04.256694'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 16368
+  Rank: 16423
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -147,7 +147,7 @@ proxies:
   average: 82.78
   UpdateDay: '2022-05-05T06:32:06.745145'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 16151
+  Rank: 16201
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -162,7 +162,7 @@ proxies:
   average: 32.6
   UpdateDay: '2022-05-05T06:30:29.946885'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 15803
+  Rank: 15898
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -177,7 +177,7 @@ proxies:
   average: 42.08
   UpdateDay: '2022-05-05T06:32:04.152986'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 10372
+  Rank: 10422
 - alterId: 0
   cipher: auto
   http-opts:
@@ -202,7 +202,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 10041
+  Rank: 10091
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -217,7 +217,7 @@ proxies:
   average: 38.69
   UpdateDay: '2022-05-05T06:32:04.176064'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 9184
+  Rank: 9284
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -232,7 +232,7 @@ proxies:
   average: 42.79
   UpdateDay: '2022-05-05T06:32:06.665379'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 8786
+  Rank: 8886
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -247,7 +247,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 8138
+  Rank: 8238
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -259,7 +259,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 7983
+  Rank: 8083
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -271,7 +271,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 7887
+  Rank: 7987
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   type: trojan
@@ -286,7 +286,7 @@ proxies:
   average: 171.19
   UpdateDay: '2022-05-05T06:31:28.213454'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 7679
+  Rank: 7709
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -301,7 +301,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 7215
+  Rank: 7263
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
@@ -316,22 +316,22 @@ proxies:
   average: 252.49
   UpdateDay: '2022-05-05T06:32:07.296922'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 6603
-- name: ssl.tcpbbr.net:443@trojan
-  server: ssl.tcpbbr.net
-  port: 443
+  Rank: 6633
+- name: www.tokyo2021.ga:443@trojan
+  server: www.tokyo2021.ga
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  country: "\U0001F1E6\U0001F1FA AU"
+  port: 443
+  password: 7a990132-cf76-4ac2-8a3c-681743fa8627
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.65
-  maximum: 49.12
-  average: 46.42
-  UpdateDay: '2022-05-05T06:32:04.194692'
-  PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 5897
+  minimum: 38.67
+  maximum: 45.69
+  average: 41.15
+  UpdateDay: '2022-04-02T15:34:32.686241'
+  PFirstFoundDay: '2022-03-14T10:28:27.050426'
+  Rank: 5990
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -358,7 +358,7 @@ proxy-groups:
   - 72.167.45.6:443@trojan
   - 45.9.10.103:443@trojan
   - 184.168.127.50:443@trojan
-  - ssl.tcpbbr.net:443@trojan
+  - www.tokyo2021.ga:443@trojan
   tolerance: 250
 rule-providers:
   anting:
