--- a/daili2.yaml
+++ b/daili2.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 5.93
-  maximum: 7.65
-  average: 6.95
-  UpdateDay: '2022-05-05T09:32:04.175233'
+  minimum: 6.28
+  maximum: 7.08
+  average: 6.81
+  UpdateDay: '2022-05-05T12:30:22.987602'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 33251
+  Rank: 33352
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,36 +60,35 @@ proxies:
   average: 15.51
   UpdateDay: '2022-05-05T09:30:29.681251'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 29847
+  Rank: 29947
 - name: 101.91.121.247:50004@ss
-  server: 101.91.121.247
   type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
+  server: 101.91.121.247
   port: 50004
-  password: '4415934295'
   cipher: aes-256-cfb
+  password: '4415934295'
   success_rate: 100.0
-  minimum: 9.39
+  minimum: 10.42
   maximum: 11.13
-  average: 10.26
-  UpdateDay: '2022-05-05T09:30:29.666463'
+  average: 10.83
+  UpdateDay: '2022-05-05T12:30:22.986733'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 25518
+  Rank: 25619
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 1443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 60.19
-  maximum: 81.42
-  average: 72.96
-  UpdateDay: '2022-05-05T09:30:37.371679'
+  minimum: 61.33
+  maximum: 67.28
+  average: 65.22
+  UpdateDay: '2022-05-05T12:30:24.156770'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 22387
+  Rank: 22458
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -99,12 +98,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 12.42
-  maximum: 46.9
-  average: 34.47
-  UpdateDay: '2022-05-05T09:32:04.470146'
+  minimum: 9.98
+  maximum: 48.61
+  average: 22.94
+  UpdateDay: '2022-05-05T12:30:22.990098'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 18838
+  Rank: 18939
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,7 +116,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 18533
+  Rank: 18626
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -127,57 +126,57 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 49.33
-  maximum: 58.14
-  average: 52.43
-  UpdateDay: '2022-05-05T09:32:04.597018'
+  minimum: 59.78
+  maximum: 79.59
+  average: 68.59
+  UpdateDay: '2022-05-05T12:30:24.166971'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 16696
+  Rank: 16752
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 73.75
-  maximum: 75.93
-  average: 74.79
-  UpdateDay: '2022-05-05T09:32:05.886162'
+  minimum: 84.47
+  maximum: 87.96
+  average: 86.26
+  UpdateDay: '2022-05-05T12:30:26.354156'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 16403
+  Rank: 16451
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 20089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 10.04
-  maximum: 44.39
-  average: 31.24
-  UpdateDay: '2022-05-05T09:30:30.258072'
+  minimum: 16.4
+  maximum: 48.52
+  average: 27.34
+  UpdateDay: '2022-05-05T12:30:23.031952'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 16244
+  Rank: 16340
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.46
-  maximum: 47.25
-  average: 44.42
-  UpdateDay: '2022-05-05T09:32:04.500740'
+  minimum: 37.38
+  maximum: 47.75
+  average: 43.55
+  UpdateDay: '2022-05-05T12:30:23.078692'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 10622
+  Rank: 10671
 - alterId: 0
   cipher: auto
   http-opts:
@@ -202,7 +201,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 10291
+  Rank: 10341
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -212,12 +211,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.62
-  maximum: 46.89
-  average: 44.62
-  UpdateDay: '2022-05-05T09:32:04.548542'
+  minimum: 42.49
+  maximum: 54.42
+  average: 47.77
+  UpdateDay: '2022-05-05T12:30:23.072101'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 9677
+  Rank: 9755
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -227,12 +226,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 48.49
-  maximum: 56.84
-  average: 52.72
-  UpdateDay: '2022-05-05T09:32:06.810768'
+  minimum: 40.31
+  maximum: 54.57
+  average: 48.56
+  UpdateDay: '2022-05-05T12:30:26.409106'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 9278
+  Rank: 9374
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -247,7 +246,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 8638
+  Rank: 8738
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -259,7 +258,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 8473
+  Rank: 8568
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -271,22 +270,22 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 8387
+  Rank: 8487
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: a3fa58b581353bb375d2ddad0f327938
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 170.84
-  maximum: 171.35
-  average: 171.15
-  UpdateDay: '2022-05-05T09:31:28.378188'
+  minimum: 174.74
+  maximum: 198.36
+  average: 183.86
+  UpdateDay: '2022-05-05T12:30:26.758447'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 7894
+  Rank: 7937
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -301,22 +300,22 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 7451
+  Rank: 7497
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
   type: trojan
   country: "\U0001F1FA\U0001F1F8 US"
-  password: 36ebef7d1b1d6205fd0c55f28800e674
+  password: 28d98f761aca9d636f44db62544628eb
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 237.98
-  maximum: 254.95
-  average: 247.98
-  UpdateDay: '2022-05-05T09:32:07.500184'
+  minimum: 250.81
+  maximum: 1261.34
+  average: 588.07
+  UpdateDay: '2022-05-05T12:30:27.901615'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 6655
+  Rank: 6684
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -331,7 +330,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 6331
+  Rank: 6399
 proxy-groups:
 - name: PG-default
   type: fallback
