--- a/daili2.yaml
+++ b/daili2.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 7.04
-  maximum: 7.27
-  average: 7.12
-  UpdateDay: '2022-05-05T15:30:29.012550'
+  minimum: 6.44
+  maximum: 7.62
+  average: 7.0
+  UpdateDay: '2022-05-05T18:32:17.459823'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 33835
+  Rank: 33936
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,20 +60,21 @@ proxies:
   average: 15.51
   UpdateDay: '2022-05-05T09:30:29.681251'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 30447
+  Rank: 30547
 - name: 101.91.121.247:50004@ss
-  type: ss
   server: 101.91.121.247
   port: 50004
-  cipher: aes-256-cfb
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: '4415934295'
+  cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.43
-  maximum: 10.38
-  average: 9.78
-  UpdateDay: '2022-05-05T15:30:29.015771'
+  minimum: 9.35
+  maximum: 11.05
+  average: 10.14
+  UpdateDay: '2022-05-05T18:32:17.465837'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 26093
+  Rank: 26185
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -83,12 +84,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.28
-  maximum: 59.86
-  average: 59.63
-  UpdateDay: '2022-05-05T15:30:30.187283'
+  minimum: 59.57
+  maximum: 60.22
+  average: 59.84
+  UpdateDay: '2022-05-05T18:32:17.647158'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 22739
+  Rank: 22805
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -98,12 +99,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 16.63
-  maximum: 47.06
-  average: 29.13
-  UpdateDay: '2022-05-05T15:30:29.048484'
+  minimum: 16.92
+  maximum: 43.67
+  average: 28.71
+  UpdateDay: '2022-05-05T18:32:17.517596'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 19340
+  Rank: 19431
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -116,7 +117,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 19012
+  Rank: 19107
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -126,12 +127,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 66.76
-  maximum: 71.74
-  average: 68.8
-  UpdateDay: '2022-05-05T15:30:30.208140'
+  minimum: 67.38
+  maximum: 74.33
+  average: 70.05
+  UpdateDay: '2022-05-05T18:32:17.662431'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 16953
+  Rank: 16994
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -141,27 +142,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 12.98
-  maximum: 77.21
-  average: 43.22
-  UpdateDay: '2022-05-05T15:30:29.109929'
+  minimum: 18.36
+  maximum: 40.06
+  average: 32.43
+  UpdateDay: '2022-05-05T18:32:17.560333'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 16727
+  Rank: 16828
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 74.46
-  maximum: 81.25
-  average: 76.94
-  UpdateDay: '2022-05-05T15:30:32.372679'
+  minimum: 73.53
+  maximum: 85.92
+  average: 78.43
+  UpdateDay: '2022-05-05T18:32:17.701653'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 16644
+  Rank: 16688
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -171,12 +172,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.09
-  maximum: 65.62
-  average: 48.19
-  UpdateDay: '2022-05-05T15:30:29.122674'
+  minimum: 41.09
+  maximum: 46.74
+  average: 43.62
+  UpdateDay: '2022-05-05T18:32:17.566768'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 10920
+  Rank: 10947
 - alterId: 0
   cipher: auto
   http-opts:
@@ -201,7 +202,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 10503
+  Rank: 10553
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -211,12 +212,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.75
-  maximum: 67.41
-  average: 49.14
-  UpdateDay: '2022-05-05T15:30:29.130100'
+  minimum: 38.86
+  maximum: 1076.28
+  average: 721.57
+  UpdateDay: '2022-05-05T18:32:19.633688'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 10210
+  Rank: 10293
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -226,12 +227,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.14
-  maximum: 51.71
-  average: 42.09
-  UpdateDay: '2022-05-05T15:30:32.338607'
+  minimum: 43.66
+  maximum: 50.67
+  average: 46.81
+  UpdateDay: '2022-05-05T18:32:17.595192'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 9743
+  Rank: 9821
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -246,7 +247,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 9238
+  Rank: 9338
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -258,7 +259,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 9058
+  Rank: 9158
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -270,7 +271,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 8987
+  Rank: 9087
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
@@ -280,12 +281,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 171.15
-  maximum: 171.81
-  average: 171.51
-  UpdateDay: '2022-05-05T15:30:32.680731'
+  minimum: 171.28
+  maximum: 171.74
+  average: 171.45
+  UpdateDay: '2022-05-05T18:32:17.968071'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 8126
+  Rank: 8171
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -300,7 +301,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 7741
+  Rank: 7789
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -315,7 +316,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 6841
+  Rank: 6941
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
@@ -325,12 +326,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 236.98
-  maximum: 249.62
-  average: 245.06
-  UpdateDay: '2022-05-05T15:30:32.888298'
+  minimum: 249.43
+  maximum: 1266.25
+  average: 588.39
+  UpdateDay: '2022-05-05T18:32:19.220002'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 6755
+  Rank: 6742
 proxy-groups:
 - name: PG-default
   type: fallback
